<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="329dp"
        app:srcCompat="@drawable/moka" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:text="@string/Profile_Name"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/ProfileAge"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/ProfileAge"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/occupation"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/occupation" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="277dp"
        android:text="@string/about_me_summary" />

</LinearLayout>