<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".SettingsFragment">

        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings_frag"
            android:textSize="35sp"
            app:drawableLeftCompat="@drawable/ic_settings" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />


        <TextView
            android:id="@+id/daily_matches_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/daily_matches_reminder"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_baseline_alarm_24" />

        <Spinner
            android:id="@+id/time_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:entries="@array/reminders"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/dist_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/maximum_distance_search_mi"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_baseline_social_distance_24" />

        <Spinner
            android:id="@+id/dist_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:entries="@array/dist_max"
            android:spinnerMode="dropdown" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/gender_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/gender"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_baseline_emoji_people_24" />

        <Spinner
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:entries="@array/gender"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />


        <TextView
            android:id="@+id/age_interest_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/interested_age_range"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_baseline_av_timer_24" />

        <TextView
            android:id="@+id/ageMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/min_age"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/age_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:entries="@array/age"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/ageMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/max_age"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/age_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:entries="@array/age"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />


        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pri_account" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/save_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/edit_text_padding10"
            android:text="@string/save" />

    </LinearLayout>
</ScrollView>